# Mors

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
Mors/: __init__.py  cluster.py  constants.py  miscellaneous.py  parameters.py  physicalmodel.py  rotevo.py  star.py  stellarevo.py
StellarEvolution/: __init__.py  miscellaneous.py  stellarevo.py
src/Mors/: __init__.py  cluster.py  physicalmodel.py
tests/: MakePlots.py
